syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "api/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(ChatCreateRequest) returns(IdResponse);
  rpc Delete(IdRequest) returns(google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns(google.protobuf.Empty);
}

message IdRequest {
  int64 Id = 1;
}

message IdResponse {
  int64 Id = 1;
}

message ChatCreateRequest {
  repeated string usernames = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}